Web settings (#3016)
* Shared directories (#3272)

* Shared directories

* Populate web content

* Lint

* Save web content

* 3004 web settings sharedcontent (#3300)

* Update dependency @mantine/prism to v5.2.3

* Improve anime episode matching (#3286)

* Bump maven-pmd-plugin from 3.17.0 to 3.18.0 (#3274)

Bumps [maven-pmd-plugin](https://github.com/apache/maven-pmd-plugin) from 3.17.0 to 3.18.0.
- [Release notes](https://github.com/apache/maven-pmd-plugin/releases)
- [Commits](https://github.com/apache/maven-pmd-plugin/compare/maven-pmd-plugin-3.17.0...maven-pmd-plugin-3.18.0)

---
updated-dependencies:
- dependency-name: org.apache.maven.plugins:maven-pmd-plugin
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* 11.4.1

* check empty path

* Update dependency @mantine/core to v5.2.4

* Update dependency @mantine/notifications to v5.2.4

* Update dependency @mantine/prism to v5.2.4

* Update dependency @mantine/hooks to v5.2.4

* mantine:5.2.4

* fix array on folders field

* remove app things from swing gui.

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: SubJunk <SubJunk@users.noreply.github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: SubJunk <subjunk@gmail.com>

* Increase width

* Formatting

* Add new web content and return the dynamic name

* Mark directories played/unplayed, scanning

* Lint

* Fix overlap?

* 3004 web settings sharedcontent (#3341)

* Update dependency @mantine/prism to v5.2.3

* Improve anime episode matching (#3286)

* Bump maven-pmd-plugin from 3.17.0 to 3.18.0 (#3274)

Bumps [